CV updated. New section introduced

--- a/index.html
+++ b/index.html
@@ -103,28 +103,58 @@
                             <br>
                         </div>
                     </div>
+                    <div class="skills">
+                        <div id="content">
+                            <h1>Skills</h1>
+                            <br>
+                            <br>
+                            <b>
+                                <i><li style="margin-left: 5%; margin-right: 5%; font-weight: 300;"><b>Programming Languages:</i></b> Python (Competent), C++ (Competent), JavaScript (Familiar), TypeScript (Novice)</li></i>
+                                <i><li style="margin-left: 5%; margin-right: 5%; font-weight: 300;"><b>Frameworks:</i></b> React.js (Familiar), Flask (Familiar), FastAPI (Familiar)</li></i>
+                                <i><li style="margin-left: 5%; margin-right: 5%; font-weight: 300;"><b>Tools and Technologies:</i></b> HTML (Familiar), CSS (Familiar), MySQL (Familiar), PostgreSQL (Familiar), Git, Jira, Visual Studio Code</li></i>
+                                <i><li style="margin-left: 5%; margin-right: 5%; font-weight: 300;"><b>Hard Skills:</i></b> Agile development, Software Development Lifecycle (SDLC), unit testing, integration testing, continuous integration and deployment (CI/CD) via relevant coursework</li></i>
+                                <i><li style="margin-left: 5%; margin-right: 5%; font-weight: 300;"><b>Soft Skills:</i></b> English and Spanish, Collaborative, Productive, Prioritization, Willingness to Learn</li></i>
+                            </b>
+                            <br>
+                        </div>
+                    </div>
                     <div class = "software-projects" id="software">
                         <div id = "software-content1">
-                            <h1>Software Projects</h1>
+                            <h1>Personal Projects</h1>
                             <br>
                         </div>
                         <div id = "software-content2">
                             <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">React.js | CSS | TypeScript | Python | FastAPI | Express.js | PostgreSQL </h4>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">Dating Web App</h3>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Started developing in June 2023, and is currently ongoing.</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">
-                                Aiming to create a future design where dating tips will be provided to newcomers and apply them properly, with an emphasis on
-                                self-esteem and establishing the foundation of a successful relationship.
+                                Developing a dating web app with React.js, CSS, and TypeScript, along with FastAPI, Express.js and PostgreSQL for backend
+                                processes.
+                            </li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">
+                                Creating a design that will emphasize self-esteem and lay the foundation for a successful relationship.
+                            </li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">
+                                Designing a matching algorithm that matches people based on attributes, such as location and bio, with planned future
+                                refinements that will improve the user experience with the selection of 10 random matches.
                             </li>
                             <br>
                             <br>
                             <hr>
                         </div>
                         <div id = "software-content3">
-                            <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">React.js | CSS | Python | Flask</h4>
+                            <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">React.js | CSS | Python | FastAPI</h4>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">Personal Website</h3>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Developed and implemented a website for displaying my works, whether they'd be web apps I designed 
-                            or other works connected to my personal hobbies, such as photography.</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">
+                                Created a website using React.js as the main framework while also using CSS and React Bootstrap to stylize the UI.
+                            </li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">
+                                Integrated a RESTful API with FastAPI to handle and display the announcements on website, with 3 of the most recent
+                                ones displayed in the 'About Me' page.
+                            </li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">
+                                Designed a portfolio page that displays 8 samples from 2 personal projects in addition to 11 samples of photos taken
+                                as part of personal hobbies.
+                            </li>
                             <br>
                             <br>
                             <hr>
@@ -133,6 +163,7 @@
                             <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">HTML | CSS</h4>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">CV (Curriculum Vitae) Website</h3>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Developed and implemented a single-page website for displaying a CV that can be read by recruiters.</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Lists important details, such as education, skills, software projects, etc.</li>
                             <br>
                             <br>
                             <hr>
@@ -146,6 +177,16 @@
                     <div class = "experience" id="exp">
                         <div id = "exp-content">
                             <h1>Experience</h1>
+                            <br>
+                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%; float: right;">Remote</h3>
+                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="position">Incoming Software Engineer Fellow</h3>
+                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="date">July 2024 - Present</h4>
+                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="workplace"><i>Headstarter AI</i></h4>
+                            <br>
+                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%; float: right;">McAllen, TX</h3>
+                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="position">Independent Software Developer</h3>
+                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="date">May 2023 - Present</h4>
+                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="workplace"><i>Self-employed</i></h4>
                             <br>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%; float: right;">McAllen, TX</h3>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="position">Retail Salesperson</h3>
